# Phase-locked-Loop

./: CMakeLists.txt  README.md  knight_rider.bit  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  rpparameterconverter.cpp  rpparameterconverter.h  rpparameterutility.cpp  rpparameterutility.h  rpregisterutility.cpp  rpregisterutility.h  rpsshcommunicator.cpp  rpsshcommunicator.h  rputility.cpp  rputility.h  testfile.txt
fpga/: .gitignore  README.md  create_project.tcl  make_cores.tcl
fpga/bitfile/: pll_project.bit
fpga/cfg/: clocks.xdc  ports.tcl  ports.xdc  red_pitaya.xml
fpga/cores/axi_bram_reader_v1_0/: axi_bram_reader.v  core_config.tcl
fpga/cores/axi_cfg_register_v1_0/: core_config.tcl
fpga/cores/axis_averager_v1_0/: axis_averager.v  core_config.tcl
fpga/cores/axis_constant_v1_0/: core_config.tcl
fpga/cores/axis_red_pitaya_adc_v1_0/: axis_red_pitaya_adc.v_unused  axis_red_pitaya_adc.vhd  clock_div_dec_filter.vhd  core_config.tcl
fpga/cores/axis_red_pitaya_dac_v1_0/: core_config.tcl
fpga/cores/bram_switch_v1_0/: bram_switch.v  core_config.tcl
fpga/scripts/: core.tcl  create_block_design.tcl
fpga/scripts/tmp/pll_project/pll_project.cache/wt/: gui_resources.wdf  webtalk_pa.xml
fpga/vhdl/: dac_out_switch.vhd  dec_filter.vhd  exp_avg_filter.vhd  exp_avg_filter_order.vhd  freq_div.vhd  mult_n_1.vhd  nco_driver_2.vhd  pid_w_range.vhd  sincos_lut.vhd  sum_limit.vhd  waveform_gen.vhd  weight_sum.vhd
installer/: README.txt
